# qtautoupdater_cmake

./: CMakeLists.txt  README.md  main.cpp
